# AI_Othello

./: README.md  main.py  pyproject.toml  test.ps1  test_heuristic.ps1  test_heuristic_2.ps1  test_heuristic_random.ps1  test_max.ps1  test_max_2.ps1  test_max_random.ps1  test_min.ps1  test_min_2.ps1  test_min_max.ps1  test_min_max_2.ps1  test_min_random.ps1  test_pruning.ps1  test_pruning_random.ps1  test_var_depth.ps1  test_var_depth_2.ps1  test_var_depth_random.ps1
Results/: readme.txt
Results/Cost/: 1_1max_run_001.csv  1_1min_run_001.csv  1max_1_run_001.csv  1max_1min_run_001.csv  1min_1_run_001.csv  1min_1max_run_001.csv  2_2max_run_001.csv  2_2min_run_001.csv  2max_2_run_001.csv  2max_2min_run_001.csv  2min_2_run_001.csv  2min_2max_run_001.csv  3_3max_run_001.csv  3_3min_run_001.csv  3max_3_run_001.csv  3max_3min_run_001.csv  3min_3_run_001.csv  3min_3max_run_001.csv  4_4max_run_001.csv  4_4min_run_001.csv  4max_4_run_001.csv  4max_4min_run_001.csv  4min_4_run_001.csv  4min_4max_run_001.csv  5_5max_run_001.csv  5_5min_run_001.csv  5max_5_run_001.csv  5max_5min_run_001.csv  5min_5_run_001.csv  5min_5max_run_001.csv  6_6max_run_001.csv  6_6min_run_001.csv  6max_6_run_001.csv  6max_6min_run_001.csv  6min_6_run_001.csv  6min_6max_run_001.csv  7_7max_run_001.csv  7_7min_run_001.csv  7max_7_run_001.csv  7max_7min_run_001.csv  (+2 more)
Scritps/: all_test.ps1  test_heuristic.ps1  test_heuristic_2.ps1  test_max.ps1  test_max_2.ps1  test_min.ps1  test_min_2.ps1  test_min_max.ps1  test_min_max_2.ps1  test_pruning.ps1  test_var_depth.ps1  test_var_depth_2.ps1
(+248 files in other folders)
