[tool.poetry]
name = "reversi"
version = "0.1.0"
description = "Jeu reversi/othello dans le terminal"
authors = ["Aurélien Chassagne & Gaelle Frauenkron & Salma Salmani"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
