[tool.poetry]
name = "Othello"
version = "1.0.0"
description = "Reversi/Othello game in terminal with parametrized AI"
authors = ["Aurélien Chassagne & Gaelle Frauenkron & Salma Salmani"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
pandas = ">=1.4.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
